<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detailed_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:clickable="true"
        android:focusable="false"
        android:elevation="@dimen/detailed_view_elevation">
...
            android:paddingEnd="@dimen/detailed_view_padding_horizontal"
            android:paddingBottom="@dimen/detailed_view_padding_bottom"
            app:layout_constraintBottom_toTopOf="@id/spacing_bottom"
            app:layout_constraintTop_toBottomOf="@id/spacing_top">

        <ImageButton
                android:id="@+id/btn_cross"
                android:layout_width="@dimen/detailed_view_cross_button_length"
                android:layout_height="@dimen/detailed_view_cross_button_length"
                android:layout_marginStart="@dimen/detailed_view_cross_button_margin"
                android:background="@null"
                android:contentDescription="@string/close"
                android:scaleType="centerCrop"
...
