<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:nestedScrollingEnabled="true"
    android:id="@+id/main_container">

    <include layout="@layout/appbar"
        android:id="@+id/appbar_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_feed_recyclerview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_feed_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        android:paddingTop="@dimen/feed_view_padding_vertical"
        android:paddingBottom="@dimen/feed_view_padding_vertical"

        app:layout_constraintTop_toBottomOf="@id/appbar_container"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <include layout="@layout/loading_badge" />

</androidx.constraintlayout.widget.ConstraintLayout>